--- a/src/components/icon/Icon.less
+++ b/src/components/icon/Icon.less
@@ -2,3 +2,8 @@
     fill: var(--text-color);
     stroke: var(--text-color);
 }
+
+.zerion-active-icon {
+    fill: var(--active-color);
+    stroke: var(--active-color);
+}
