--- a/src/components/drawer/PageDrawer.less
+++ b/src/components/drawer/PageDrawer.less
@@ -3,7 +3,7 @@
     width: 180px;
     overflow: auto;
     // border-right: 1px solid var(--text-color);
-    background-color: var(--drawer-background-color);
+    background-color: var(--drawer-bg-color);
     color: var(--text-color);
     padding: 24px 12px 24px 20px;
   }
