--- a/src/components/nav/Header.less
+++ b/src/components/nav/Header.less
@@ -1,5 +1,5 @@
 .zerion-header {
   .am-navbar {
-    background-color: var(--titlebar-background-color);
+    background-color: var(--titlebar-bg-color);
   }
 }
