--- a/src/components/search/Search.less
+++ b/src/components/search/Search.less
@@ -1,9 +1,9 @@
 .zerion-search-modal {
   .am-modal-content, .am-search {
-    background-color: var(--background-color);
+    background-color: var(--bg-color);
   }
   .am-search-input {
-    background-color: var(--titlebar-background-color);
+    background-color: var(--titlebar-bg-color);
     .am-search-synthetic-ph {
       // text-align: left;
     }
