--- a/src/components/chart/MoneyLineChart.less
+++ b/src/components/chart/MoneyLineChart.less
@@ -2,6 +2,7 @@
   height: 306px;
   border-radius: 12px;
   border: 1px solid var(--text-color);
+  margin-top: 20px;
 
   & > div:first-child {
     height: 20px;
