--- a/src/index.less
+++ b/src/index.less
@@ -1,3 +1,8 @@
-html, body, #root, .zerion-layout {
+body, #root, .zerion-layout {
+  background-color: var(--bg-color) !important;
+  color: var(--text-color);
+}
+
+body {
   height: 100%;
 }
