--- a/src/components/chart/MoneyLineChart.less
+++ b/src/components/chart/MoneyLineChart.less
@@ -31,4 +31,10 @@
       }
     }
   }
+
+  .g2-tooltip {
+    background-color: transparent !important;
+    color: var(--text-color) !important;
+    box-shadow: none !important;
+  }
 }
