--- a/src/components/icon/Icon.less
+++ b/src/components/icon/Icon.less
@@ -1,6 +1,7 @@
 .zerion-icon {
     fill: var(--text-color);
     stroke: var(--text-color);
+    vertical-align: middle;
 }
 
 .zerion-active-icon {
