--- a/src/components/drawer/PageDrawer.less
+++ b/src/components/drawer/PageDrawer.less
@@ -48,9 +48,11 @@
     height: 48px;
     line-height: 48px;
     font-size: 14px;
+    img {
+      vertical-align: middle;
+    }
     span:last-child {
       margin-left: 12px;
-      vertical-align: super;
     }
   }
 
