--- a/src/pages/overview/OverView.less
+++ b/src/pages/overview/OverView.less
@@ -30,11 +30,8 @@
       height: 36px;
       border-radius: 36px;
       background-color: var(--active-color);
-      color: '#ffffff';
+      line-height: 36px;
       text-align: center;
-      & > span:first-child {
-        margin-top: 6px;
-      }
       & > span:last-child {
         margin-left: 5px;
       }
